--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 <html>
     <head><title>Principal</title></head>
-    <body><h3>Bienvenidos a mi sitio web</h3></body>
+    <body><h3>Style desde jpereyra00</h3></body>
 
 </html>
